--- a/index.html
+++ b/index.html
@@ -164,8 +164,11 @@ form.reset();
 
 
 // 8. ESCUTANDO O EVENTO DO BOTÃO/FORMULÁRIO
-// Anexamos a função 'adiciinarFilme' ao evento de 'submit' do formulário
+// Anexamos a função 'adicionarFilme' ao evento de 'submit' do formulário.
+form.addEventListener('submit', adicionarFilme);
 
-        </script>
+console.log("JavaScript Carregado. Pronto para iniciar o catalogo!");
+</script>
+
 </body>
 </html>
